--- a/popup.html
+++ b/popup.html
@@ -5,8 +5,8 @@
     <style>
         body {
             font-size: 16px;
-            width: 170px;
-            height: 135px;
+            width: 200px;
+            height: 235px;
             overflow: hidden;
             padding: 10px 5px;
         }
@@ -20,14 +20,39 @@
             text-align: center;
         }
         .prc-top-controls {
-            display: flex;
+            display: relative;
         }
+        .prc-top-controls:after {
+            display: block;
+            content: " ";
+            clear: both;
+            margin-bottom: 5px;
+        }
+
+        .prc-slower-col div button {
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .col-3 {
+            float: left;
+            width: 30%;
+            margin: 0 1.67%;
+        }
+
+        .prc-faster-col div button {
+            margin: 0 auto;
+            text-align: center;
+        }
+
         .prc-top-controls-rate {
-            flex-grow: 1;
             text-align: center;
             line-height: 0.95em;
-            padding-top:7px;
-            color:#467DB3;
+            padding-top: 37px;
+            color: #467DB3;
+        }
+        .prc-top-controls-rate div {
+            margin: 0 auto;
         }
         .prc-control-btn {
             padding: 3px 10px;
@@ -36,13 +61,16 @@
             border: 1px solid #aaa;
             background: #eee;
         }
+        .prc-control-btn span{
+        }
         .prc-control-btn:focus {
             outline: -webkit-focus-ring-color auto 0px;
         }
         .prc-control-faster-slower-btn {
-            height: 40px;
-            width: 40px;
+            height: 30px;
+            width: 60px;
             font-size: 24px;
+            font-weight: bolder;
             line-height: 1em;
             font-weight: bold;
             box-shadow: inset 0 1px 0 rgba(255,255,255,0.4),1px 1px 2px rgba(0,0,0,0.2);
@@ -54,10 +82,18 @@
             top: -2px;
         }
         #prc-slower {
-            background: linear-gradient(to bottom, #B1E613 0%, #7CBC08 100%);
+            background: #B1E613;
             border-color: #8EAC27;
         }
         #prc-faster {
+            background: #F14545;
+            border-color: #B5191D;
+        }
+        #prc-slower10x {
+            background: linear-gradient(to bottom, #B1E613 0%, #7CBC08 100%);
+            border-color: #8EAC27;
+        }
+        #prc-faster10x {
             background: linear-gradient(to bottom, #F14545 0%, #CE1B23 100%);
             border-color: #B5191D;
         }
@@ -70,19 +106,50 @@
         .prc-control-rate-label {
             font-size: 9px;
         }
-        .prc-extra-controls {
-            display: flex;
-            padding-top: 20px;
+
+        .prc-speed-label {
+            text-align: center;
+            font-size: 30px;
+            font-weight: bolder;
+            margin-bottom: 4px;
         }
+
+        .prc-control-slower-label {
+            color: #7CBC08;
+        }
+
+        .prc-control-faster-label {
+            color: #CE1B23;
+        }
+
+        .prc-extra-controls {
+            display: relative;
+        }
+
+        .prc-extra-controls-top {
+            display: relative;
+            padding: 10px 0;
+        }
+
+        .prc-extra-controls-top:after {
+            display: block;
+            content: " ";
+            clear: both;
+        }
+
         .prc-extra-controls-normal {
-            flex-grow: 1;
-            padding: 0 10px;
+
+        }
+        .prc-extra-controls-normal:after {
+            display: block;
+            content: " ";
+            clear: both;
         }
         .prc-control-rate-btn {
             border-radius: 3px;
             font-size: 10px;
             width: 100%;
-            padding: 12px 5px 8px 5px;
+            padding: 12px 5px 12px 5px;
             border: 1px solid #ccc;
             background-color: #f0f0f0;
             color: #999;
@@ -95,8 +162,19 @@
             transition: background .5s, color .5s;
         }
         #prc-rate-1 {
-            padding: 30px 5px;
+            padding: 33px 5px;
             font-size: 13px;
+        }
+        #prc-rate-10x {
+            color: white;
+            padding: 15px 5px;
+            font-size: 24px;
+            margin-bottom: 10px;
+            background: red;
+            background: -webkit-linear-gradient(left, orange , yellow, green, cyan, blue, violet, red);
+            background: -o-linear-gradient(right, orange, yellow, green, cyan, blue, violet, red);
+            background: -moz-linear-gradient(right, orange, yellow, green, cyan, blue, violet, red);
+            background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet, red);
         }
         .prc-extra-controls-slow-top, .prc-extra-controls-fast-top {
             padding-bottom: 10px;
@@ -135,36 +213,61 @@
 
     <div id="prc-popup-content" class="hidden">
         <div class="prc-top-controls">
-            <div class="prc-top-controls-slower">
-                <button id="prc-slower" class="prc-control-btn prc-control-faster-slower-btn"><span>-</span></button>
-            </div>
-            <div class="prc-top-controls-rate">
+            <div class="prc-slower-col col-3">
+                <div class="prc-top-controls-slower">
+                    <button id="prc-slower" class="prc-control-btn prc-control-faster-slower-btn"><span>&lsaquo;</span></button>
+                </div>
+                <div class="prc-speed-label">
+                    <span class="prc-control-slower-label">-</span>
+                </div>
+                <div class="prc-top-controls-slower10x">
+                    <button id="prc-slower10x" class="prc-control-btn prc-control-faster-slower-btn"><span>&laquo;</span></button>
+                </div>
+            </div>  
+            <div class="prc-top-controls-rate col-3">
                 <span id="prc-rate" class="prc-control-rate"></span><br>
                 <span class="prc-control-rate-label">Playback Rate</span>
             </div>
-            <div class="prc-top-controls-slower">
-                <button id="prc-faster" class="prc-control-btn prc-control-faster-slower-btn" autofocus><span>+</span></button>
+            <div class="prc-faster-col col-3">
+                <div class="prc-top-controls-faster">
+                    <button id="prc-faster" class="prc-control-btn prc-control-faster-slower-btn" autofocus><span>&rsaquo;</span></button>
+                </div>
+                <div class="prc-speed-label">
+                    <span class="prc-control-faster-label">+</span>
+                </div>
+                <div class="prc-top-controls-slower10x">
+                    <button id="prc-faster10x" class="prc-control-btn prc-control-faster-slower-btn" autofocus><span>&raquo;</span></button>
+                </div>
             </div>
         </div>
 
         <div class="prc-extra-controls">
-            <div class="prc-extra-controls-slow">
-                <div class="prc-extra-controls-slow-top">
-                    <button id="prc-rate-05" class="prc-control-btn prc-control-rate-btn"> 0.5x </button>
+            <div class="prc-extra-controls-top">
+                <div class="prc-extra-controls-slow col-3">
+                    <div class="prc-extra-controls-slow-top">
+                        <button id="prc-rate-05" class="prc-control-btn prc-control-rate-btn"> 0.5x </button>
+                    </div>
+                    <div class="prc-extra-controls-slow-bottom">
+                        <button id="prc-rate-08" class="prc-control-btn prc-control-rate-btn"> 0.8x </button>
+                    </div>
                 </div>
-                <div class="prc-extra-controls-slow-bottom">
-                    <button id="prc-rate-08" class="prc-control-btn prc-control-rate-btn"> 0.8x </button>
+                <div id="prc-extra-controls-center" class="col-3">
+                    <div class="prc-extra-controls-normal">
+                        <button id="prc-rate-1" class="prc-control-btn prc-control-rate-btn"> 1.0x </button>
+                    </div>
+                </div>
+                <div class="prc-extra-controls-fast col-3">
+                    <div class="prc-extra-controls-fast-top">
+                        <button id="prc-rate-15" class="prc-control-btn prc-control-rate-btn"> 1.5x </button>
+                    </div>
+                    <div class="prc-extra-controls-fast-bottom">
+                        <button id="prc-rate-2" class="prc-control-btn prc-control-rate-btn"> 2.0x </button>
+                    </div>
                 </div>
             </div>
-            <div class="prc-extra-controls-normal">
-                <button id="prc-rate-1" class="prc-control-btn prc-control-rate-btn"> 1.0x </button>
-            </div>
-            <div class="prc-extra-controls-fast">
-                <div class="prc-extra-controls-fast-top">
-                    <button id="prc-rate-15" class="prc-control-btn prc-control-rate-btn"> 1.5x </button>
-                </div>
-                <div class="prc-extra-controls-fast-bottom">
-                    <button id="prc-rate-2" class="prc-control-btn prc-control-rate-btn"> 2.0x </button>
+            <div class="prc-extra-controls-bottom">
+                <div class="prc-extra-controls-10x">
+                    <button id="prc-rate-10x" class="prc-control-btn prc-control-rate-btn"> 10.0x </button>
                 </div>
             </div>
         </div>
